tests/regression/errors/duplicate_field_tydef_record.eff
(* Duplicate fields are not allowed in a record type. *)
type cow = {a : unit; a : integer}
